<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#fff">
        <!--取消按钮 按下返回-->
        <Button
            android:id="@+id/btn_hobbiesCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/goal"
            android:textColor="#000"
            android:textSize="16sp" />
        <!--确定按钮按下修改信息并返回-->
        <Button
            android:id="@+id/btn_hobbiesOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/ok"
            android:textColor="#000"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#eee"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#eee"
            android:gravity="center"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/cb_run"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#eee"
                android:button="@drawable/runbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/run"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#eee"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_riding"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#eee"
                android:button="@drawable/ridingbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ride"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#eee"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_soccer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#eee"
                android:button="@drawable/soccerbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/soccer"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
