<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">
    <!--标题-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#fff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/edit_info"
            android:textColor="#000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_profileOk"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:text="@string/ok"
            android:textSize="20sp" />
    </RelativeLayout>

    <!--修改头像-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="128dp"
            android:layout_height="128dp">

            <com.lrving.gudongfood.model.XCRoundImageView
                android:id="@+id/iv_portrait"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_portrait"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editPortrait"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />

    </LinearLayout>
    <!--修改昵称-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nickname"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>
    <!--修改性别-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sex"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editSex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>
    <!--修改年龄-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editAge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>

    <!--修改兴趣-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hobbies"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hobby"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editHobbies"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>
    <!--修改修改个性签名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/autograph"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_autograph"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editAutograph"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>
    <!--修改运动目的-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/goal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_goal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editGoal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>
    <!--显示减肥信息-->
    <LinearLayout
        android:id="@+id/ll_weightInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/goal_weight"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_goalWeight"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="#888" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/goal_time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_goalTime"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="#888" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="3dp"
            android:text="@string/body_info"
            android:textColor="#aaa"
            android:textSize="12sp" />
    </LinearLayout>

    <!--修改身高-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/height"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editHeight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>
    <!--修改体重-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/weight"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editWeight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text=">"
            android:textColor="#888" />
    </LinearLayout>

</LinearLayout>
